--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<a href="index.html" class="logo"><strong>IGAP</strong> <span>for Epilepsy</span></a>
+						<div style="text-align: center; padding:2px 0px; position: absolute; left: 50%;">
+							<img src="images/logo-60.png" width="60px" alt="lgap-logo" />	
+						</div>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -24,7 +27,7 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Partners</a></li>
+							<li><a href="landing.html">LGAP 10 Year Plan</a></li>
 							<!-- <li><a href="#">Generic</a></li>
 							<li><a href="elements.html">Elements</a></li> -->
 						</ul>
@@ -37,7 +40,7 @@
 								<h1>Intersectoral Global Action Plan</h1>
 							</header>
 							<div class="content">
-								<p>The <a href="https://www.who.int/">World Health Organization</a> launched IGAP<br/>
+								<p>The <a href="https://www.who.int/">World Health Organization</a> launched <a href="https://www.who.int/news/item/28-04-2022-draft-intersectoral-global-action-plan-on-epilepsy-and-other-neurological-disorders-2022-2031" target="_blank">IGAP</a><br/>
 									to improve the lives of people with Neurological conditions. </p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Our Partners</a></li>
@@ -57,7 +60,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">WHO</a></h3>
-										<p>The <a href="https://www.who.int/about" target="_blank">World Health Organization</a> leads and champions global efforts to give everyone, everywhere an equal chance to live a healthy life.</p>
+										<p>The <a href="https://www.who.int/about/governance/world-health-assembly/seventy-third-world-health-assembly" target="_blank">World Health Organization</a> leads and champions global efforts to give everyone, everywhere an equal chance to live a healthy life.</p>
 									</header>
 								</article>
 								<article>
@@ -66,7 +69,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">IBE</a></h3>
-										<p><a href="https://www.ibe-epilepsy.org/about/" target="_blank">The Internationl Bureau for Epilepsy</a> improves the social condition and quality of life of people with epilepsy and those who care for them.</p>
+										<p><a href="https://www.ibe-epilepsy.org/initiatives/global-advocacy/" target="_blank">The Internationl Bureau for Epilepsy</a> improves the social condition and quality of life of people with epilepsy and those who care for them.</p>
 									</header>
 								</article>
 								<article>
@@ -75,7 +78,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">WFN</a></h3>
-										<p>The <a href="https://wfneurology.org/about-us" target="_blank">World Federation of Neurology</a> promotes global neurological education and training, with the emphasis placed firmly on under-resourced parts of the world.</p>
+										<p>The <a href="https://wfneurology.org/activities/wfn-and-who/igap-strategic-objectives" target="_blank">World Federation of Neurology</a> promotes global neurological education and training, with the emphasis placed firmly on under-resourced parts of the world.</p>
 									</header>
 								</article>
 								<article>
@@ -84,12 +87,12 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">ILAE</a></h3>
-										<p>The <a href="https://www.ilae.org/about-ilae" target="blank">International League Against Epilepsy</a> ensures that all have the educational and research resources that are essential in understanding, diagnosing, and treating persons with epilepsy.
+										<p>The <a href="https://www.ilae.org/congresses/webinars/intersectoral-global-action-plan-on-epilepsy-and-other-neurological-disorders-what-s-next?amp;&amp;=amp%3B&fbclid=IwAR0j2Lh0LarWR8CMmOfjF1BZ6zl4n0AqS8VRq8g3BteXNdy5WmbooqPLF5c" target="blank">International League Against Epilepsy</a> ensures that all have the educational and research resources that are essential in understanding, diagnosing, and treating persons with epilepsy.
 
 										</p>
 									</header>
 								</article>
-								<article>
+								<!-- <article>
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
@@ -106,7 +109,7 @@
 										<h3><a href="landing.html" class="link">ESA</a></h3>
 										<p><a href="https://epilepsy.org.za/about/" target="_blank">Epilepsy South Africa</a> the only organization offering specialised and comprehensive services to persons with and affected by epilepsy.</a></p>
 									</header>	
-								</article>
+								</article> -->
 							</section>
 
 						<!-- Two -->
@@ -149,16 +152,15 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>(+27) 076 523 8083</span>
+										<span><a href="tel:+27765238083">(+27) 076 523 8083</a></span>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-home"></span>
 										<h3>Address</h3>
-										<span>Cotte &amp; Govan Mbeki Rd<br />
-										Wetton, Cape Town<br />
-										South Africa</span><br/>
+										<span>Cape Town<br />
+											South Africa</span><br/>
 
 										
 									</div>
