--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">LGAP 10 Year Plan</a></li>
+							<li><a href="landing.html">IGAP 10 Year Plan</a></li>
+							<li><a href="#">About us</a></li>
+							<li><a href="#">Contact us</a></li>
+							<li><a href="#">Get Involved</a></li>
+							<li><a href="#">Neurological Disorders</a></li>
+							<li><a href="#">Resources</a></li>
+							<li><a href="#">FAQ</a></li>
+							<li><a href="#">Survey</a></li>
+							<li><a href="#">Your Stories</a></li> 
 							<!-- <li><a href="#">Generic</a></li>
 							<li><a href="elements.html">Elements</a></li> -->
 						</ul>
@@ -40,7 +48,7 @@
 								<h1>Intersectoral Global Action Plan</h1>
 							</header>
 							<div class="content">
-								<p>The <a href="https://www.who.int/">World Health Organization</a> launched <a href="https://www.who.int/news/item/28-04-2022-draft-intersectoral-global-action-plan-on-epilepsy-and-other-neurological-disorders-2022-2031" target="_blank">IGAP</a><br/>
+								<p>The <a href="https://www.who.int/about/governance/world-health-assembly/the-who-and-the-wha-an-explainer" target="_blank">World Health Organization</a> launched <a href="https://www.who.int/news/item/28-04-2022-draft-intersectoral-global-action-plan-on-epilepsy-and-other-neurological-disorders-2022-2031" target="_blank">IGAP</a><br/>
 									to improve the lives of people with Neurological conditions. </p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Our Partners</a></li>
