--- a/landing.html
+++ b/landing.html
@@ -27,7 +27,15 @@
 				<nav id="menu">
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
-						<li><a href="landing.html">LGAP 10 Year Plan</a></li>
+						<li><a href="landing.html">IGAP 10 Year Plan</a></li>
+						<li><a href="#">About us</a></li>
+						<li><a href="#">Contact us</a></li>
+						<li><a href="#">Get Involved</a></li>
+						<li><a href="#">Neurological Disorders</a></li>
+						<li><a href="#">Resources</a></li>
+						<li><a href="#">FAQ</a></li>
+						<li><a href="#">Survey</a></li>
+						<li><a href="#">Your Stories</a></li> 
 						<!-- <li><a href="#">Generic</a></li>
 						<li><a href="elements.html">Elements</a></li> -->
 					</ul>
@@ -63,7 +71,8 @@
 									<sup>
 										<b>References:</b><br/>
 										<a href="https://www.ibe-epilepsy.org/roundtablereport2021/" target="_blank">Round Table Report 2021</a><br/>
-										<a href="https://www.ilae.org/about-ilae/policy-and-advocacy/international-epilepsy-policy" target="_blank">International Epilepsy Policy</a>
+										<a href="https://www.ilae.org/about-ilae/policy-and-advocacy/international-epilepsy-policy" target="_blank">International Epilepsy Policy</a><br/>
+										<a href="https://www.who.int/news/item/28-04-2022-draft-intersectoral-global-action-plan-on-epilepsy-and-other-neurological-disorders-2022-2031" target="_blank">WHO Draft IGAP on Epilepsy &amp; Neurological Disorders</a><br/>
 									</sup>
 								</div>
 							</section>
