--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>IGAP</strong> <span>for Epilepsy</span></a>
+						<a href="index.html" class="logo"><strong>IGAP</strong> <span>Awareness</span></a>
 						<div style="text-align: center; padding:2px 0px; position: absolute; left: 50%;">
 							<img src="images/logo-60.png" width="60px" alt="lgap-logo" />	
 						</div>
@@ -28,13 +28,13 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="landing.html">IGAP 10 Year Plan</a></li>
-							<li><a href="#">About us</a></li>
+							<li><a href="about.html">About us</a></li>
 							<li><a href="#">Contact us</a></li>
 							<li><a href="#">Get Involved</a></li>
 							<li><a href="#">Neurological Disorders</a></li>
 							<li><a href="#">Resources</a></li>
 							<li><a href="#">FAQ</a></li>
-							<li><a href="#">Survey</a></li>
+							<li><a href="surveys.html">Survey</a></li>
 							<li><a href="#">Your Stories</a></li> 
 							<!-- <li><a href="#">Generic</a></li>
 							<li><a href="elements.html">Elements</a></li> -->
@@ -95,7 +95,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">ILAE</a></h3>
-										<p>The <a href="https://www.ilae.org/congresses/webinars/intersectoral-global-action-plan-on-epilepsy-and-other-neurological-disorders-what-s-next?amp;&amp;=amp%3B&fbclid=IwAR0j2Lh0LarWR8CMmOfjF1BZ6zl4n0AqS8VRq8g3BteXNdy5WmbooqPLF5c" target="blank">International League Against Epilepsy</a> ensures that all have the educational and research resources that are essential in understanding, diagnosing, and treating persons with epilepsy.
+										<p>The <a href="https://www.ilae.org/congresses/webinars/intersectoral-global-action-plan-on-epilepsy-and-other-neurological-disorders-what-s-next?amp;&amp;=amp%3B&fbclid=IwAR0j2Lh0LarWR8CMmOfjF1BZ6zl4n0AqS8VRq8g3BteXNdy5WmbooqPLF5c" target="blank">International League Against Epilepsy</a> ensures that all have the <a href="https://www.ilae.org/education" target="_blank">educational and research resources</a> that are essential in understanding, <a href="https://www.ilae.org/education/diagnostic-manual" target="_blank">diagnosing</a>, and <a href="https://www.ilae.org/education/new-primary-care-curriculum" target="_blank">treating persons with epilepsy</a>.
 
 										</p>
 									</header>
@@ -149,6 +149,28 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
+								<form method="post" action="#">
+									<div class="fields">
+										<div class="field half">
+											<label for="name">Name</label>
+											<input type="text" name="name" id="name" />
+										</div>
+										<div class="field half">
+											<label for="email">Email</label>
+											<input type="text" name="email" id="email" />
+										</div>
+										<div class="field">
+											<label for="message">Message</label>
+											<textarea name="message" id="message" rows="6"></textarea>
+										</div>
+									</div>
+									<ul class="actions">
+										<li><input type="submit" value="Send Message" class="primary" /></li>
+										<li><input type="reset" value="Clear" /></li>
+									</ul>
+								</form>
+							</section>
+							<section class="split">
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
