--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>IGAP for Epilepsy</title>
+		<title>IGAP Awareness</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -14,7 +14,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>IGAP</strong> <span>Awareness</span></a>
+						<a href="index.html" class="logo" title="Intersectoral Global Action Plan Awareness"><strong>IGAP</strong>  <span>Awareness</span></a>
 						<div style="text-align: center; padding:2px 0px; position: absolute; left: 50%;">
 							<img src="images/logo-60.png" width="60px" alt="lgap-logo" />	
 						</div>
@@ -31,13 +31,11 @@
 							<li><a href="about.html">About us</a></li>
 							<li><a href="#">Contact us</a></li>
 							<li><a href="#">Get Involved</a></li>
-							<li><a href="#">Neurological Disorders</a></li>
+							<li><a href="disorders.html">Neurological Disorders</a></li>
 							<li><a href="#">Resources</a></li>
 							<li><a href="#">FAQ</a></li>
 							<li><a href="surveys.html">Survey</a></li>
 							<li><a href="#">Your Stories</a></li> 
-							<!-- <li><a href="#">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li> -->
 						</ul>
 					</nav>
 
@@ -48,7 +46,7 @@
 								<h1>Intersectoral Global Action Plan</h1>
 							</header>
 							<div class="content">
-								<p>The <a href="https://www.who.int/about/governance/world-health-assembly/the-who-and-the-wha-an-explainer" target="_blank">World Health Organization</a> launched <a href="https://www.who.int/news/item/28-04-2022-draft-intersectoral-global-action-plan-on-epilepsy-and-other-neurological-disorders-2022-2031" target="_blank">IGAP</a><br/>
+								<p>The <a href="https://www.who.int/publications/i/item/9789240076624" target="_blank">World Health Organization</a> launched <a href="https://www.who.int/news/item/28-04-2022-draft-intersectoral-global-action-plan-on-epilepsy-and-other-neurological-disorders-2022-2031" target="_blank">IGAP</a><br/>
 									to improve the lives of people with Neurological conditions. </p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Our Partners</a></li>
@@ -100,24 +98,6 @@
 										</p>
 									</header>
 								</article>
-								<!-- <article>
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">BAND</a></h3>
-										<p>The <a href="https://bandfdn.org/about/" target="_blank">Band Foundation</a> is a US-based private family foundation that makes grants in support of nature conservation and epilepsy care.</a></p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">ESA</a></h3>
-										<p><a href="https://epilepsy.org.za/about/" target="_blank">Epilepsy South Africa</a> the only organization offering specialised and comprehensive services to persons with and affected by epilepsy.</a></p>
-									</header>	
-								</article> -->
 							</section>
 
 						<!-- Two -->
@@ -165,7 +145,7 @@
 										</div>
 									</div>
 									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
+										<li><input type="submit" disabled value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Clear" /></li>
 									</ul>
 								</form>
@@ -210,7 +190,7 @@
 								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; LGAP 2023</li>
+								<li>&copy; IGAP 2023</li>
 							</ul>
 						</div>
 					</footer>
