--- a/surveys.html
+++ b/surveys.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>IGAP for Epilepsy</title>
+		<title>IGAP Awareness</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -14,7 +14,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>IGAP</strong> <span>for Epilepsy</span></a>
+						<a href="index.html" class="logo" title="Intersectoral Global Action Plan Awareness"><strong>IGAP</strong>  <span>Awareness</span></a>
 						<div style="text-align: center; padding:2px 0px; position: absolute; left: 50%;">
 							<img src="images/logo-60.png" width="60px" alt="lgap-logo" />	
 						</div>
@@ -31,13 +31,11 @@
 							<li><a href="about.html">About us</a></li>
 							<li><a href="#">Contact us</a></li>
 							<li><a href="#">Get Involved</a></li>
-							<li><a href="#">Neurological Disorders</a></li>
+							<li><a href="disorders.html">Neurological Disorders</a></li>
 							<li><a href="#">Resources</a></li>
 							<li><a href="#">FAQ</a></li>
 							<li><a href="surveys.html">Survey</a></li>
 							<li><a href="#">Your Stories</a></li> 
-							<!-- <li><a href="#">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li> -->
 						</ul>
 					</nav>
 
@@ -89,86 +87,86 @@
 
 					</div>
 
-				<!-- Contact -->
-					<section id="contact">
-						<div class="inner">
-							<section>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="6"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Clear" /></li>
-									</ul>
-								</form>
-							</section>
-							<section class="split">
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-envelope"></span>
-										<h3>Email</h3>
-										<a href="mailto:igap2031@gmail.com">igap2031@gmail.com</a>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-phone"></span>
-										<h3>Phone</h3>
-										<span><a href="tel:+27765238083">(+27) 076 523 8083</a></span>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-home"></span>
-										<h3>Address</h3>
-										<span>Cape Town<br />
-											South Africa</span><br/>
-
-										
-									</div>
-								</section>
-							</section>
-						</div>
-					</section>
-
-				<!-- Footer -->
-				<footer id="footer">
-					<div class="inner">
-						<ul class="icons">
-							<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; LGAP 2023</li>
-						</ul>
+<!-- Contact -->
+<section id="contact">
+	<div class="inner">
+		<section>
+			<form method="post" action="#">
+				<div class="fields">
+					<div class="field half">
+						<label for="name">Name</label>
+						<input type="text" name="name" id="name" />
 					</div>
-				</footer>
+					<div class="field half">
+						<label for="email">Email</label>
+						<input type="text" name="email" id="email" />
+					</div>
+					<div class="field">
+						<label for="message">Message</label>
+						<textarea name="message" id="message" rows="6"></textarea>
+					</div>
+				</div>
+				<ul class="actions">
+					<li><input type="submit" disabled value="Send Message" class="primary" /></li>
+					<li><input type="reset" value="Clear" /></li>
+				</ul>
+			</form>
+		</section>
+		<section class="split">
+			<section>
+				<div class="contact-method">
+					<span class="icon solid alt fa-envelope"></span>
+					<h3>Email</h3>
+					<a href="mailto:igap2031@gmail.com">igap2031@gmail.com</a>
+				</div>
+			</section>
+			<section>
+				<div class="contact-method">
+					<span class="icon solid alt fa-phone"></span>
+					<h3>Phone</h3>
+					<span><a href="tel:+27765238083">(+27) 076 523 8083</a></span>
+				</div>
+			</section>
+			<section>
+				<div class="contact-method">
+					<span class="icon solid alt fa-home"></span>
+					<h3>Address</h3>
+					<span>Cape Town<br />
+						South Africa</span><br/>
 
-			</div>
+					
+				</div>
+			</section>
+		</section>
+	</div>
+</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+<!-- Footer -->
+<footer id="footer">
+	<div class="inner">
+		<ul class="icons">
+			<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+			<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+			<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+			<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+			<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+		</ul>
+		<ul class="copyright">
+			<li>&copy; IGAP 2023</li>
+		</ul>
+	</div>
+</footer>
 
-	</body>
+</div>
+
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.scrolly.min.js"></script>
+<script src="assets/js/jquery.scrollex.min.js"></script>
+<script src="assets/js/browser.min.js"></script>
+<script src="assets/js/breakpoints.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
+
+</body>
 </html>
