--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<a href="index.html" class="logo" title="Intersectoral Global Action Plan Awareness"><strong>IGAP</strong>  <span>Awareness</span></a>
-						<div style="text-align: center; padding:2px 0px; position: absolute; left: 50%;">
+						<div class="igap-logo">
 							<img src="images/logo-60.png" width="60px" alt="lgap-logo" />	
 						</div>
 						<nav>
