--- a/disorders.html
+++ b/disorders.html
@@ -13,15 +13,15 @@
 			<div id="wrapper">
 
 				<!-- Header -->
-					<header id="header" class="alt">
-						<a href="index.html" class="logo" title="Intersectoral Global Action Plan Awareness"><strong>IGAP</strong>  <span>Awareness</span></a>
-						<div style="text-align: center; padding:2px 0px; position: absolute; left: 50%;">
-							<img src="images/logo-60.png" width="60px" alt="lgap-logo" />	
-						</div>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
+				<header id="header" class="alt">
+					<a href="index.html" class="logo" title="Intersectoral Global Action Plan Awareness"><strong>IGAP</strong>  <span>Awareness</span></a>
+					<div class="igap-logo">
+						<img src="images/logo-60.png" width="60px" alt="lgap-logo" />	
+					</div>
+					<nav>
+						<a href="#menu">Menu</a>
+					</nav>
+				</header>
 
 				<!-- Menu -->
 					<nav id="menu">
