--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 									<h2>Overview</h2>
 									
 									<p>The IGAP Awareness Campaign is made up of
-									laypersons living with and affected these neurological disorders, to provide a platform for self
+									laypersons living with and affected by these neurological disorders, to provide a platform for self
 									representation. This will provide data to professionals in the medical and non-medical aspects of epilepsy
 									and other neurological disorders.</p>
 
