--- a/about.html
+++ b/about.html
@@ -24,20 +24,18 @@
 				</header>
 
 				<!-- Menu -->
-					<nav id="menu">
-						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">IGAP 10 Year Plan</a></li>
-							<li><a href="about.html">About us</a></li>
-							<li><a href="#">Contact us</a></li>
-							<li><a href="#">Get Involved</a></li>
-							<li><a href="disorders.html">Neurological Disorders</a></li>
-							<li><a href="#">Resources</a></li>
-							<li><a href="#">FAQ</a></li>
-							<li><a href="surveys.html">Survey</a></li>
-							<li><a href="#">Your Stories</a></li> 
-						</ul>
-					</nav>
+				<nav id="menu">
+					<ul class="links">
+						<li><a href="index.html">Home</a></li>
+						<li><a href="landing.html">IGAP 10 Year Plan</a></li>
+						<li><a href="about.html">About us</a></li>
+						<li><a href="disorders.html">Neurological Disorders</a></li>
+						<li><a href="resources.html">Resources</a></li>
+						<li><a href="faq.html">FAQ</a></li>
+						<li><a href="surveys.html">Survey</a></li>
+						<li><a href="stories.html">Your Stories</a></li> 
+					</ul>
+				</nav>
 
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
@@ -104,26 +102,8 @@
 <section id="contact">
 	<div class="inner">
 		<section>
-			<form method="post" action="#">
-				<div class="fields">
-					<div class="field half">
-						<label for="name">Name</label>
-						<input type="text" name="name" id="name" />
-					</div>
-					<div class="field half">
-						<label for="email">Email</label>
-						<input type="text" name="email" id="email" />
-					</div>
-					<div class="field">
-						<label for="message">Message</label>
-						<textarea name="message" id="message" rows="6"></textarea>
-					</div>
-				</div>
-				<ul class="actions">
-					<li><input type="submit" disabled value="Send Message" class="primary" /></li>
-					<li><input type="reset" value="Clear" /></li>
-				</ul>
-			</form>
+			Please use our social media platforms to connect with us. Alternatively you can email or call us during office hours.
+			If you would just like to leave us a message, you can <a href="https://forms.gle/4BxYPmVvMBqozMMv9" target="_blank">fill in this form</a> and we will get back to you usually within 48 hours.
 		</section>
 		<section class="split">
 			<section>
@@ -158,11 +138,11 @@
 <footer id="footer">
 	<div class="inner">
 		<ul class="icons">
-			<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-			<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-			<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-			<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-			<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+			<li><a href="https://twitter.com/igap_awareness" target="_blank" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+			<li><a href="https://www.facebook.com/people/IGAP-Awareness/61550295473681/" target="_blank" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+			<li><a href="https://www.instagram.com/igap.awareness/" target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+			<li><a href="https://www.tiktok.com/@igapawareness2031" target="_blank" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
+			<li><a href="https://www.youtube.com/@igapawareness" target="_blank" class="icon brands alt fa-youtube"><span class="label">YouTube</span></a></li>
 		</ul>
 		<ul class="copyright">
 			<li>&copy; IGAP 2023</li>
