--- a/index.html
+++ b/index.html
@@ -24,20 +24,18 @@
 					</header>
 
 				<!-- Menu -->
-					<nav id="menu">
-						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">IGAP 10 Year Plan</a></li>
-							<li><a href="about.html">About us</a></li>
-							<li><a href="contact.html">Contact us</a></li>
-							<li><a href="help.html">Get Involved</a></li>
-							<li><a href="disorders.html">Neurological Disorders</a></li>
-							<li><a href="resources.html">Resources</a></li>
-							<li><a href="faq.html">FAQ</a></li>
-							<li><a href="surveys.html">Survey</a></li>
-							<li><a href="stories.html">Your Stories</a></li> 
-						</ul>
-					</nav>
+				<nav id="menu">
+					<ul class="links">
+						<li><a href="index.html">Home</a></li>
+						<li><a href="landing.html">IGAP 10 Year Plan</a></li>
+						<li><a href="about.html">About us</a></li>
+						<li><a href="disorders.html">Neurological Disorders</a></li>
+						<li><a href="resources.html">Resources</a></li>
+						<li><a href="faq.html">FAQ</a></li>
+						<li><a href="surveys.html">Survey</a></li>
+						<li><a href="stories.html">Your Stories</a></li> 
+					</ul>
+				</nav>
 
 				<!-- Banner -->
 					<section id="banner" class="major">
@@ -125,86 +123,68 @@
 
 					</div>
 
-				<!-- Contact -->
-					<section id="contact">
-						<div class="inner">
-							<section>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="6"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" disabled value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Clear" /></li>
-									</ul>
-								</form>
-							</section>
-							<section class="split">
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-envelope"></span>
-										<h3>Email</h3>
-										<a href="mailto:igap2031@gmail.com">igap2031@gmail.com</a>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-phone"></span>
-										<h3>Phone</h3>
-										<span><a href="tel:+27765238083">(+27) 076 523 8083</a></span>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-home"></span>
-										<h3>Address</h3>
-										<span>Cape Town<br />
-											South Africa</span><br/>
+<!-- Contact -->
+<section id="contact">
+	<div class="inner">
+		<section>
+			Please use our social media platforms to connect with us. Alternatively you can email or call us during office hours.
+			If you would just like to leave us a message, you can <a href="https://forms.gle/4BxYPmVvMBqozMMv9" target="_blank">fill in this form</a> and we will get back to you usually within 48 hours.
+		</section>
+		<section class="split">
+			<section>
+				<div class="contact-method">
+					<span class="icon solid alt fa-envelope"></span>
+					<h3>Email</h3>
+					<a href="mailto:igap2031@gmail.com">igap2031@gmail.com</a>
+				</div>
+			</section>
+			<section>
+				<div class="contact-method">
+					<span class="icon solid alt fa-phone"></span>
+					<h3>Phone</h3>
+					<span><a href="tel:+27765238083">(+27) 076 523 8083</a></span>
+				</div>
+			</section>
+			<section>
+				<div class="contact-method">
+					<span class="icon solid alt fa-home"></span>
+					<h3>Address</h3>
+					<span>Cape Town<br />
+						South Africa</span><br/>
 
-										
-									</div>
-								</section>
-							</section>
-						</div>
-					</section>
+					
+				</div>
+			</section>
+		</section>
+	</div>
+</section>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; IGAP 2023</li>
-							</ul>
-						</div>
-					</footer>
+<!-- Footer -->
+<footer id="footer">
+	<div class="inner">
+		<ul class="icons">
+			<li><a href="https://twitter.com/igap_awareness" target="_blank" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+			<li><a href="https://www.facebook.com/people/IGAP-Awareness/61550295473681/" target="_blank" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+			<li><a href="https://www.instagram.com/igap.awareness/" target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+			<li><a href="https://www.tiktok.com/@igapawareness2031" target="_blank" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
+			<li><a href="https://www.youtube.com/@igapawareness" target="_blank" class="icon brands alt fa-youtube"><span class="label">YouTube</span></a></li>
+		</ul>
+		<ul class="copyright">
+			<li>&copy; IGAP 2023</li>
+		</ul>
+	</div>
+</footer>
 
-			</div>
+</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.scrolly.min.js"></script>
+<script src="assets/js/jquery.scrollex.min.js"></script>
+<script src="assets/js/browser.min.js"></script>
+<script src="assets/js/breakpoints.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
 </html>
